--- a/cx-workspace/client-extensions/testing-cx-custom-element/src/App.css
+++ b/cx-workspace/client-extensions/testing-cx-custom-element/src/App.css
@@ -1,20 +1,13 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
+testing-cx-custom-element .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
+testing-cx-custom-element .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.logo.react:hover {
+testing-cx-custom-element .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
@@ -28,15 +21,17 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
+  testing-cx-custom-element a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
 }
 
-.card {
+testing-cx-custom-element .card {
   padding: 2em;
+  background: none;
+  box-shadow: none;
 }
 
-.read-the-docs {
+testing-cx-custom-element .read-the-docs {
   color: #888;
 }
