--- a/cx-workspace/client-extensions/testing-cx-custom-element/src/index.css
+++ b/cx-workspace/client-extensions/testing-cx-custom-element/src/index.css
@@ -1,4 +1,4 @@
-:root {
+testing-cx-custom-element {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -12,31 +12,30 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  display: flex;
+  place-items: center;
+  flex-direction: column;
 }
 
-a {
+testing-cx-custom-element a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
+testing-cx-custom-element a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
+testing-cx-custom-element h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-button {
+testing-cx-custom-element button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -47,23 +46,23 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+testing-cx-custom-element button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+testing-cx-custom-element button:focus,
+testing-cx-custom-element button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
+  testing-cx-custom-element {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
+  testing-cx-custom-element a:hover {
     color: #747bff;
   }
-  button {
+  testing-cx-custom-element button {
     background-color: #f9f9f9;
   }
 }
